# marine-tts

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  tts.rs
src/commands/: mod.rs
