[package]
name = "marine-tts"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.6"
serenity = { version = "0.10.9", features = ["framework", "standard_framework"] }
songbird = "0.2.0"
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
